# Skoogeer-Noise

./: .gitignore  CHANGES.md  README.md  __init__.py  pyproject.toml  requirements.txt  sample.yaml
docs/: LEARNINGS.md  fluid-simulation.md  mustache_template_guide.md  mustache_template_guide.yaml
src/: __init__.py  fluid_advection.py  latent_channel_space_ops.py  latent_channel_stats_preview.py  latent_frequency_domain.py  latent_mesh_drag.py  latent_to_image.py  masking.py  model_list.py  mustache_templates.py  qwen_noise_nodes.py  rotorquant_attention.py  seeded_noise.py  turboquant_attention.py
tests/: test_fluid_advection.py  test_flux_patchify_nodes.py  test_latent_channel_space_ops.py  test_latent_channel_stats_preview.py  test_latent_frequency_domain.py  test_latent_mesh_drag.py  test_latent_to_image.py  test_model_list.py  test_mustache_templates.py  test_qwen_noise_nodes.py  test_rotorquant_attention.py  test_seeded_noise.py  test_turboquant_attention.py
