[project]
name = "comfyui-skoogeer-noise"
description = "Noise, conditioning, and perturbation utility nodes for ComfyUI (procedural noise, mesh drag, latent channel stats preview)."
dependencies = ["numpy>=2.0", "torch>=2.1"]
version = "1.1.0"
license = "LICENSE"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = ""
